--- a/fe/index.html
+++ b/fe/index.html
@@ -22,22 +22,26 @@
 				<ul class="todo-list">
 					<!-- These are here just to show the structure of the list items -->
 					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+				<!--
 					<li class="completed">
 						<div class="view">
 							<input class="toggle" type="checkbox" checked>
 							<label>Taste JavaScript</label>
+							<input type="hidden" id="id" value="1"/>
 							<button class="destroy"></button>
 						</div>
 						<input class="edit" value="Create a TodoMVC template">
 					</li>
-					<li>
+					<li >
 						<div class="view">
 							<input class="toggle" type="checkbox">
 							<label>Buy a unicorn</label>
+							<input type="hidden" id="id" value="2"/>
 							<button class="destroy"></button>
 						</div>
 						<input class="edit" value="Rule the web">
 					</li>
+				-->
 				</ul>
 			</section>
 			<!-- This footer should hidden by default and shown when there are todos -->
@@ -47,13 +51,13 @@
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
-						<a class="selected" href="#/">All</a>
+						<a class="selected" href="javascript:void(0);">All</a>
 					</li>
 					<li>
-						<a href="#/active">Active</a>
+						<a class="active" href="javascript:void(0);">Active</a>
 					</li>
 					<li>
-						<a href="#/completed">Completed</a>
+						<a class="completed" href="javascript:void(0);">Completed</a>
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
@@ -70,6 +74,7 @@
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
 		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="js/app.js"></script>
+		<script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script src="./js/app.js"></script>
 	</body>
 </html>
